# Agentic-One

./: .gitignore  README.md
.github/: copilot-instructions.md
config/: lab-monitor.service  n8n-gateway.json
docs/: ARCHITECTURE.md  N8N_WORKFLOWS.md  SETUP_GUIDE.md  TROUBLESHOOTING.md
scripts/: audit_ai_core.sh  install_ai_core.sh
services/brain/: ingest.py  requirements.txt
services/brain/data/: README.md
services/monitoring/: Cargo.toml
services/monitoring/src/: index.html  main.rs
