[package]
name = "lab_monitor"
version = "0.1.0"
edition = "2021"
authors = ["an02H <an02@docker>"]
description = "Agentic-One — Lab Monitoring Micro-service (Rust/Actix)"

[dependencies]
actix-web = "4"
sysinfo = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
